force-app/src/objects/TR1__Application__c.object
<CustomObject>
    <fields>
        <fullName>Accreditation_activity__c</fullName>
        <formula>TR1__Job__r.Accreditation_Activity__r.Name</formula>
        <label>Accreditation activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Name_Text__c</fullName>
        <description>Used for Email template, lookup field is not possible.</description>
        <formula>TR1__Applicant__r.FirstName + &quot; &quot; +  TR1__Applicant__r.LastName</formula>
        <label>Applicant Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <description>Unique ID for the data migration</description>
        <externalId>true</externalId>
        <label>Application ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Application_Status_textcopy__c</fullName>
        <formula>TEXT(Application_status__c)</formula>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_status__c</fullName>
        <label>Application status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                    <default>true</default>
                    <label>Applied</label>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
                <value>
                    <fullName>Under Revision</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_on__c</fullName>
        <label>Applied on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_for_Multiple_Visits__c</fullName>
        <inlineHelpText>CIS works in two semsters: Semester 1 refers to visits taking place between 1 January to 30 June. 
Semester 2 refers to visits taking place between 1 July to 31 December.</inlineHelpText>
        <label>Available for Multiple Visits?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple this semester</fullName>
                </value>
                <value>
                    <fullName>Only one this semester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CISApplicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>CIS_Contact_Application__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Copies the Contact email on Job (process builder) to an email field so this field can be used in Email alert.</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_of_departure__c</fullName>
        <inlineHelpText>Please list the country where you will be based at the time of this Evaluation.</inlineHelpText>
        <label>Location at time of visit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOS_accreditation_school__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Head_of_School__r.Full_Name__c</formula>
        <label>HOS accreditation school</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_manager_email__c</fullName>
        <description>Used in process builder to copy email address to so it can be used in an email alert.</description>
        <label>Hiring manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hiring_manager_email_send__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is checked if the Hiring manager email is send</inlineHelpText>
        <label>Hiring manager email send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_agree_to_the_Evaluator_Code_of_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree to CIS Professional Expectations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_do_not_require_approval_from_a_superv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This confirms that I have secured permission to be released from school on the dates listed for this evaluation from a supervisor who has the authority to do so.</inlineHelpText>
        <label>I have secured permission to participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Important2__c</fullName>
        <formula>&quot;Please save the dates until you are notified of the outcome.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Important</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important__c</fullName>
        <formula>&quot;*Please enter the details of your Supervisor below. The person listed should have the authority to approve your leave during these visit dates. Please note, if you are shortlisted they will be contacted to approve your participation.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Important</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_CIS_Evaluator_Code_of_Conduct__c</fullName>
        <defaultValue>&quot;https://info.cois.org/cis-evaluator-professional-expectations&quot;</defaultValue>
        <label>CIS Evaluator Professional Expectations</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Code_of_Conduct__c</fullName>
        <formula>HYPERLINK(&quot;https://community.cois.org/educators/s/code-of-conduct&quot;, 
&quot;CIS Code of Conduct&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Code of Conduct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longlist_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longlist Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Applications__c</fullName>
        <formula>IF( TR1__Applicant__r.Id =  $User.ContactId , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Institution__c</fullName>
        <formula>IF(TR1__Job__r.TR1__Account__r.Id = $User.Account_ID__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_behalf_of__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On behalf of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_you_will_travel_on__c</fullName>
        <inlineHelpText>Should travel be required for this visit, please indicate on which passport you would travel</inlineHelpText>
        <label>Passport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Representing_Agency__c</fullName>
        <label>Representing Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACSI</fullName>
                </value>
                <value>
                    <fullName>AdvancED</fullName>
                </value>
                <value>
                    <fullName>BSME</fullName>
                </value>
                <value>
                    <fullName>BSO</fullName>
                </value>
                <value>
                    <fullName>CAIS</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>IB CC</fullName>
                </value>
                <value>
                    <fullName>IB DP</fullName>
                </value>
                <value>
                    <fullName>IB MYP</fullName>
                </value>
                <value>
                    <fullName>IB PYP</fullName>
                </value>
                <value>
                    <fullName>IPC</fullName>
                </value>
                <value>
                    <fullName>ISAS</fullName>
                </value>
                <value>
                    <fullName>KHDA</fullName>
                </value>
                <value>
                    <fullName>LAHC</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>NCCT</fullName>
                </value>
                <value>
                    <fullName>NEASC</fullName>
                </value>
                <value>
                    <fullName>NYSAIS</fullName>
                </value>
                <value>
                    <fullName>ONESQA</fullName>
                </value>
                <value>
                    <fullName>PENTA</fullName>
                </value>
                <value>
                    <fullName>SACS</fullName>
                </value>
                <value>
                    <fullName>WASC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Representing_Other_Agency__c</fullName>
        <label>(777) Representing Other Agency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACSI</fullName>
                </value>
                <value>
                    <fullName>AdvancED</fullName>
                </value>
                <value>
                    <fullName>BSME</fullName>
                </value>
                <value>
                    <fullName>BSO</fullName>
                </value>
                <value>
                    <fullName>CAIS</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>IB CC</fullName>
                </value>
                <value>
                    <fullName>IB DP</fullName>
                </value>
                <value>
                    <fullName>IB MYP</fullName>
                </value>
                <value>
                    <fullName>IB PYP</fullName>
                </value>
                <value>
                    <fullName>IPC</fullName>
                </value>
                <value>
                    <fullName>ISAS</fullName>
                </value>
                <value>
                    <fullName>KHDA</fullName>
                </value>
                <value>
                    <fullName>LAHC</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>NCCT</fullName>
                </value>
                <value>
                    <fullName>NEASC</fullName>
                </value>
                <value>
                    <fullName>NYSAIS</fullName>
                </value>
                <value>
                    <fullName>ONESQA</fullName>
                </value>
                <value>
                    <fullName>PENTA</fullName>
                </value>
                <value>
                    <fullName>SACS</fullName>
                </value>
                <value>
                    <fullName>WASC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Activity</label>
        <referenceTo>Engagement_Activity__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>School for accreditation application</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Candidate_for_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked the candidate is hired for this position, via the button hired candidate on top of the page.</inlineHelpText>
        <label>Selected Candidate for Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the status is Active.</inlineHelpText>
        <label>Status Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Host_School__c</fullName>
        <label>Status Host School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Supervisor__c</fullName>
        <label>Status Supervisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not sent</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Email__c</fullName>
        <label>Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supervisor_First_Name__c</fullName>
        <inlineHelpText>Evaluators currently working in schools must seek permission from someone to be released from school for Evaluator service.   If you are retired or not currently working within a school, please list your own details here.</inlineHelpText>
        <label>Supervisor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Last_Name__c</fullName>
        <label>Supervisor Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Position_Title__c</fullName>
        <label>Supervisor Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ATS_Stage__c</fullName>
        <description>Helps to identify the stage of the Application</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Email__c</fullName>
        <formula>TR1__Applicant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Mobile__c</fullName>
        <formula>TR1__Applicant__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Phone__c</fullName>
        <formula>TR1__Applicant__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Summary__c</fullName>
        <inlineHelpText>Short personal message to school or motivation letter.</inlineHelpText>
        <label>Candidate Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Source__c</fullName>
        <label>Job Board Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Website</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Yahoo Search</fullName>
                </value>
                <value>
                    <fullName>Bing Search</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>SoCRA</fullName>
                </value>
                <value>
                    <fullName>ISPE</fullName>
                </value>
                <value>
                    <fullName>SCDM</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>RAPS</fullName>
                </value>
                <value>
                    <fullName>Net-Temps</fullName>
                </value>
                <value>
                    <fullName>NACCB</fullName>
                </value>
                <value>
                    <fullName>Job Fair</fullName>
                </value>
                <value>
                    <fullName>Careerbuilder</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>Ad</fullName>
                </value>
                <value>
                    <fullName>ACRP</fullName>
                </value>
                <value>
                    <fullName>DICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_First_Name__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Phone__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName &amp; &quot; &quot; &amp;  TR1__Job__r.TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Reporting</label>
        <referenceTo>TR1__Job_Reporting__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Job_s_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job&apos;s Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Days_in_Stage__c</fullName>
        <formula>IF(IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c = 0, 1, IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Opportunity_Discussed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Discussed</label>
        <referenceTo>TR1__Opportunity_Discussed__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Reject_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerApplicationReject?Id=&apos;&amp;Id&amp;&apos;&amp;retURL=/&apos;&amp;TR1__Applicant__c&amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Applicant__c, IMAGE(&apos;/resource/TR1__Reject&apos;, &apos;Revert&apos;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rjt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notification__c</fullName>
        <label>Rejection Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Rejection Email</fullName>
                </value>
                <value>
                    <fullName>Job Owner Will Notify</fullName>
                </value>
                <value>
                    <fullName>Contact Owner Will Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Job Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Stage_End_Date__c</fullName>
        <label>Stage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Start_Date__c</fullName>
        <label>Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <formula>TEXT(TR1__Job_Reporting__r.TR1__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Job Manager Stage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Submit_And_Email_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSubmittal?conid=&apos;&amp; TR1__Applicant__c &amp;&apos;&amp;jobconid=&apos;&amp; TR1__Job__r.TR1__Contact__c &amp;&apos;&amp;email=&apos;&amp; TR1__Job_Contact_Email__c &amp;&apos;&amp;jobid=&apos;&amp;TR1__Job__c&amp;&apos;&amp;retURL=/&apos;&amp; TR1__Applicant__c, IMAGE(&apos;/resource/TR1__sumittalwithemail&apos;, &apos;Submit And Email&apos;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S A E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_History_Key__c</fullName>
        <formula>if(ISPICKVAL(Application_status__c,&apos;Accepted&apos;),TR1__Job__r.Id &amp;&quot;_&quot;&amp; TR1__Applicant__r.Id ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit History Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for process builder, otherwise it keeps sending withdrawn email everytime there is an update on a withdrawn application.</description>
        <label>Withdrawn email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X_Applicant_First_Name__c</fullName>
        <formula>TR1__Applicant__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Applicant First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Applicant_Last_Name__c</fullName>
        <formula>TR1__Applicant__r.LastName</formula>
        <label>X Applicant Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Application_Deadline__c</fullName>
        <formula>TR1__Job__r.Application_Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X_Country_of_Evaluation__c</fullName>
        <formula>TEXT(TR1__Job__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Country of Evaluation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_End_Date_Evaluation__c</fullName>
        <formula>TR1__Job__r.AccreditationCycleStage__r.EvaluationVisitEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X End Date Evaluation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X_Expertise__c</fullName>
        <formula>TEXT(TR1__Job__r.Position_Expertise_old__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Expertise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Position__c</fullName>
        <formula>TEXT( TR1__Job__r.Position__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_School_Name__c</fullName>
        <formula>TR1__Job__r.TR1__Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Start_Date_Evaluation__c</fullName>
        <formula>TR1__Job__r.AccreditationCycleStage__r.EvaluationVisitStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Start Date Evaluation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X_Today_5_Days__c</fullName>
        <formula>TODAY() + 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Today + 5 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X_Today_7_Days__c</fullName>
        <formula>TODAY() + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Today + 7 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X_Type_of_Activity__c</fullName>
        <formula>TR1__Job__r.Accreditation_Activity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X Type of Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_text__c</fullName>
        <formula>&quot;This confirms that I have secured permission to be released from school on the dates listed for this evaluation from a supervisor who has the authority to do so.&quot;</formula>
        <label>test text</label>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>Institution_s_Applicants</fullName>
        <columns>NAME</columns>
        <columns>TR1__Job__c</columns>
        <columns>CISApplicant__c</columns>
        <columns>Application_status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publish__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>My_Institution__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TR1__Application__c.TR1__Application</value>
        </filters>
        <label>Institution&apos;s Applicants</label>
        <language>en_US</language>
        <sharedTo>
            <group>School_Recruiter</group>
        </sharedTo>
    </listViews>
</CustomObject>